# proccie

./: .golangci.yml  AGENTS.md  CONFIG.md  Cargo.toml  DEVELOP.md  DIAGRAM.md  IMPLEMENTATION.md  LICENSE  Makefile  Procfile.example.toml  README.md  USAGE.md  go.mod
.githooks/: pre-commit
cmd/proccie/: main.go  main_test.go
internal/config/: config.go  config_test.go  const.go  envfile.go  envfile_test.go  environment.go  environment_test.go  filter.go  filter_test.go  helpers_test.go  order.go  parser.go  parser_test.go  types.go  types_test.go  validate.go  validate_test.go
internal/log/: const.go  mux.go  mux_test.go  types.go
internal/runner/: const.go  deps.go  deps_test.go  env_test.go  helpers_test.go  process.go  process_test.go  readiness.go  runner.go  runner_test.go  types.go
src/: lib.rs  main.rs  mux.rs  sync.rs
src/config/: environment.rs  error.rs  graph.rs  mod.rs  parse.rs  procfile.rs  types.rs  validate.rs
src/config/schema/: mod.rs  process.rs  readiness.rs
src/logger/: color.rs  level.rs  line.rs  mod.rs  store.rs  writer.rs
src/runner/: control.rs  deps.rs  exit.rs  lifecycle.rs  mod.rs  probe.rs  process.rs  pump.rs  readiness.rs  shutdown.rs
src/service/: mod.rs  status.rs
src/theme/: detect.rs  mod.rs  palette.rs  parse.rs
src/tui/: app.rs  color.rs  mod.rs  search.rs  ui.rs
src/tui/app/: input.rs  mod.rs
src/tui/view/: footer.rs  mod.rs  tabs.rs  viewport.rs
tests/: cli.rs  config.rs  logging.rs  mux.rs  router.rs  runner.rs  tui.rs
tests/common/: mod.rs
