[package]
name = "proccie"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Process manager that runs and supervises multiple processes with dependency ordering, readiness checks, and graceful shutdown"
license = "MIT"
repository = "https://github.com/KieranP/proccie"
default-run = "proccie"

[[bin]]
name = "proccie"
path = "src/main.rs"

[lib]
name = "proccie"
path = "src/lib.rs"

[dependencies]
anstream = "1"
anstyle = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
humantime = "2"
nix = { version = "0.31", features = ["signal", "process"] }
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
terminal-colorsaurus = "1.0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "time", "io-util", "sync"] }
tokio-util = "0.7"
toml = "1"

[dev-dependencies]
anstyle = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
